--- a/worksbynrfz/improve-wf.html
+++ b/worksbynrfz/improve-wf.html
@@ -69,7 +69,7 @@
   </header>
 
 
-  <section class="breadcrumb-area bg-img bg-overlay" style="background-image: url(https://i.imgur.com/sBOOEqY.png)">
+  <section class="breadcrumb-area-cont bg-img bg-overlay" style="background-image: url(https://i.imgur.com/sBOOEqY.png)">
     <div class="container h-100">
       <div class="row h-100 align-items-center">
         <div class="col-12">
@@ -90,103 +90,80 @@
   </section>
 
 
-  <section class="wbnrfz-summ clearfix">
-    <div class="wbnrfz_details wow fadeInUp" data-wow-delay="100ms">
-      <div class="container">
-        <div class="row justify-content-center">
-          <div class="col-lg-12">
-            <div>
-              <span>LTA's New Wayfinding System</span>
-              <h1>Experimenting Improvements of Current Wayfinding</h1>
+  <section class="about-me-summ section-padding-80-0 clearfix">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12 col-12 box-indiv">
+          <div class="about-me-summary text-center mb-80 wow fadeInUp" data-wow-delay="100ms">
+            <div class="summ-icon">
+              <i class="fa-solid fa-pen-to-square"></i>
             </div>
-            <div class="details_catagory_wrap">
-              <div class="single_catagory">
-                <span>Category</span>
-                <h4>Concepts & Replications</h4>
-              </div>
-              <div class="single_catagory">
-                <span>Project Year</span>
-                <h4>2024</h4>
-              </div>
-              <div class="single_catagory">
-                <span>Share Project</span>
-                <div class="social_links">
-                  <a
-                    href="https://www.facebook.com/sharer/sharer.php?u=https://nurafianzulkifli.com/worksbynrfz/improve-wf.html" title="Facebook">
-                    <i class="fa-brands fa-facebook"></i> </a>
-                  <a href="https://x.com/intent/post?url=https://nurafianzulkifli.com/worksbynrfz/improve-wf.html&text= EICW - Implementation Brainstorming"
-                    title="X (Twitter)">
-                    <i class="fa-brands fa-x-twitter"></i></a>
-                  <a href="#" class="clipboard" onclick="copyToClipboard()" title="Copy Link"><i
-                      class="fa-solid fa-clipboard"></i>
-                    <p class="clipboard-copied" style="font-size: 12px;"></p>
-                  </a>
-                </div>
-              </div>
+            <h3 style="font-size: 20px; font-weight: bolder;">Project Description</h3>
+            <h4 style="font-size: 15px; font-weight: normal;"> A self-made handbook of how I explored different ways to
+              make the current Wayfinding system better.<br><br>
+              Also covered:<br>
+              - Design Improvements <br>
+              - Font and Color Palettes <br>
+              - Design Ideas Brainstorming
+          </div>
+        </div>
 
+        <div class="col-md-6 col-lg-6 box-indiv">
+          <div class="about-me-summary text-center mb-80 wow fadeInUp" data-wow-delay="300ms">
+            <div class="summ-icon">
+              <i class="fa-solid fa-list"></i>
             </div>
-            <div class="single_catagory">
-              <a class="btn wbnrfz_btn" href="downloads/Experimenting Improvements of Current Wayfinding.pdf" download=""><i class="fa-solid fa-download"></i>&nbsp; Download the First
-                Edition</a>
-              <a class="btn wbnrfz_btn" href="https://drive.google.com/file/d/1jKlaRXYsOWCaQVGjVIBPz8G8X-uq_GfO/view?usp=sharing"><i class="fa-solid fa-external-link"></i>&nbsp; View in Google
-                Drive</a>
+            <h3 style="font-size: 20px; font-weight: bolder;">Category</h3>
+            <h4 style="font-size: 15px; font-weight: normal;">Concepts & Replications</h4>
+          </div>
+        </div>
+
+        <div class="col-md-6 col-lg-6 box-indiv">
+          <div class="about-me-summary text-center mb-80 wow fadeInUp" data-wow-delay="500ms">
+            <div class="summ-icon">
+              <i class="fa-solid fa-calendar-days"></i>
             </div>
+            <h3 style="font-size: 20px; font-weight: bolder;">Project Year</h3>
+            <h4 style="font-size: 15px; font-weight: normal;">2024</h4>
           </div>
         </div>
       </div>
     </div>
-  </section>
 
-  <section class="about-me-summ bg-gray section-padding-80-0 clearfix">
-    <div class="wbnrfz_details wow fadeInUp" data-wow-delay="100ms">
-      <div class="container">
-        <div class="row justify-content-center">
-          <div class="col-lg-12">
-            <div class="details_info">
-              <div class="row">
-                <div class="col-lg-12">
-                  <div class="info">
-                    <p>A self-made handbook of how I explored different ways to
-                      make the current Wayfinding system better. <br>
-
-                      Covered in this Handbook:<br>
-                      - Design Improvements <br>
-                      - Font and Color Palettes <br>
-                      - Design Ideas Brainstorming</p>
-                    </p>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-
-            <div class="banner wow fadeInUp" data-wow-delay="150ms">
-              <a href="https://i.imgur.com/sBOOEqY.png" class="portfolio-img"><img src="https://i.imgur.com/sBOOEqY.png"
-                  class="img-fluid" alt="cover-page"></a>
-            </div>
-
-            <div class="details_single_img">
-              <div class="row">
-                <div class="col-lg-6 col-md-6">
-                  <div class="thumb">
-                    <a href="https://i.imgur.com/W3vPlwI.png" class="portfolio-img"><img
-                        src="https://i.imgur.com/W3vPlwI.png" class="img-fluid" alt="font-col-palette"></a>
-                  </div>
-                </div>
-                <div class="col-lg-6 col-md-6">
-                  <div class="thumb">
-                    <a href="https://i.imgur.com/94YwAP9.png" class="portfolio-img"><img
-                        src="https://i.imgur.com/94YwAP9.png" class="img-fluid" alt="des-idea"></a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
+    <!-- Button Section -->
+    <div class="row">
+      <div class="col-12 text-center wow fadeInUp" data-wow-delay="700ms">
+        <a href="https://drive.google.com/file/d/1jKlaRXYsOWCaQVGjVIBPz8G8X-uq_GfO/view?usp=sharing"
+          class="btn pw-btn btn-2 mt-15" target="_blank">
+          <i class="fa-solid fa-external-link"></i>&nbsp; View in Google Drive</a>
+      </div>
+      <div class="col-12 text-center wow fadeInUp" data-wow-delay="700ms">
+        <a href="downloads/Experimenting Improvements of Current Wayfinding.pdf" download
+          class="btn pw-btn btn-2 mt-15" target="_blank">
+          <i class="fa-solid fa-download"></i>&nbsp; Download Handbook</a>
       </div>
     </div>
   </section>
 
+  </div>
+  </section>
+
+
+  <section class="about-me-area bg-gray section-padding-screenS clearfix">
+    <div class="col-lg-12 screenS wow fadeInUp" data-wow-delay="100ms">
+      <div class="portfolio-info">
+        <div class="portfolio-details-slider swiper">
+          <div class="swiper-wrapper align-items-center">
+
+            <div class="swiper-slide">
+              <img src="https://i.imgur.com/sBOOEqY.png" alt="cover-page">
+            </div>
+          </div>
+          <div class="swiper-pagination"></div>
+        </div>
+      </div>
+    </div>
+  </section>
 
 
   <footer class="footer-area">
@@ -206,8 +183,7 @@
               <a href="https://github.com/nurafianZulkifli"><i class="fa-brands fa-github" aria-hidden="true"></i></a>
               <a href="https://twitter.com/nrfzlkf_"><i class="fa-brands fa-x-twitter" aria-hidden="true"></i></a>
               <a href="https://www.facebook.com/Nrfnzlkf/"><i class="fa-brands fa-facebook" aria-hidden="true"></i></a>
-              <a href="https://www.instagram.com/zrfn_lkf/"><i class="fa-brands fa-instagram"
-                  aria-hidden="true"></i></a>
+              <a href="https://www.instagram.com/zrfn_lkf/"><i class="fa-brands fa-instagram" aria-hidden="true"></i></a>
             </div>
           </div>
         </div>
@@ -237,8 +213,6 @@
   <script src="../js/isotope.pkgd.min.js"></script>
 
   <script src="../js/portfolio-comp.js"></script>
-
-  <script src="../js/copy-to-clipboard.js"></script>
 
 
 </body>
