--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
     </header>
 
 
-    <section class="breadcrumb-area-subp bg-img bg-overlay" style="background-image: url(img/bg-img/hero-bg-small.png);">
+    <section class="breadcrumb-area bg-img bg-overlay" style="background-image: url(img/bg-img/hero-bg-small.png);">
         <div class="container h-100">
             <div class="row h-100 align-items-center">
                 <div class="col-12">
@@ -291,7 +291,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-6 col-lg-4">
+                <!-- <div class="col-md-6 col-lg-4">
                     <div class="timeline-content box-indiv-2 text-center mb-80 wow fadeInUp" data-wow-delay="100ms">
                         <div class="period-date-exp">
                             Oct 2024
@@ -301,7 +301,7 @@
                                 - IT Desktop Support Engineer (Kyndryl)</b>
                             </p>
                     </div>
-                </div>
+                </div> -->
 
                 <div class="col-md-6 col-lg-4">
                     <div class="timeline-content box-indiv-2 text-center mb-80 wow fadeInUp" data-wow-delay="100ms">
