--- a/blog.html
+++ b/blog.html
@@ -65,7 +65,7 @@
     </header>
 
 
-    <section class="breadcrumb-area-subp bg-img bg-overlay" style="background-image: url(img/bg-img/hero-bg-small.png);">
+    <section class="breadcrumb-area bg-img bg-overlay" style="background-image: url(img/bg-img/hero-bg-small.png);">
         <div class="container h-100">
             <div class="row h-100 align-items-center">
                 <div class="col-12">
