--- a/worksbynrfz/improve-wf.html
+++ b/worksbynrfz/improve-wf.html
@@ -69,7 +69,7 @@
   </header>
 
 
-  <section class="breadcrumb-area-cont bg-img bg-overlay" style="background-image: url(https://i.imgur.com/sBOOEqY.png)">
+  <section class="breadcrumb-area bg-img bg-overlay" style="background-image: url(https://i.imgur.com/sBOOEqY.png)">
     <div class="container h-100">
       <div class="row h-100 align-items-center">
         <div class="col-12">
